<resources>
    <string name="app_name">di.me mobile</string>
    <string name="project_landing_page">http://dimetrials.bdigital.org:8080/dime/</string>
    <string name="tab_persons">Persons</string>
    <string name="tab_groups">Groups</string>
    <string name="tab_personDetailProfile">Profile</string>
    <string name="tab_personDetailData">Data</string>
    <string name="tab_personDetailMessages">Liveposts</string>
    <string name="tab_groupDetail">Group detail: </string>
    <string name="tab_profileCards">My Profile Cards</string>
    <string name="tab_profileDetail">Card Detail: </string>
    <string name="tab_communication">Liveposts</string>
    <string name="tab_communicationDetail">Livepost: </string>
    <string name="tab_myResourcesData">Resources</string>
    <string name="tab_myResourcesDataboxes">Databoxes</string>
    <string name="tab_dataDetail">Resource detail: </string>
    <string name="tab_databoxDetail">Databox detail: </string>
    <string name="tab_settingsGeneral">General</string>
    <string name="tab_settingsServices">Services</string>
    <string name="tab_settingsRules">Rules</string>
    <string name="tab_places">Places</string>
    <string name="tab_placeDetail">Place detail: </string>
    <string name="tab_situations">Situations</string>
    <string name="tab_activities">Fitbit activities</string>
    <string name="tab_notifications">Notifications</string>
    <string name="clearCredentialsBtnText">Clear stored credentials</string>
    <string name="people_view_caption">People</string>
    <string name="communication_view_caption">Communication</string>
    <string name="share_view_caption">Share</string>
    <string name="data_view_caption">MyData</string>
    <string name="profile_view_caption">MyProfiles</string>
    <string name="situation_view_caption">Situations</string>
    <string name="no_notifications_pending">no notifications</string>
    <string name="autoDetectionDialogTitle">Crawling settings</string>
	<string name="account_configuration_label">Settings</string>
	<string name="settings_view_functionalities">Add-on functionalities</string>
	<string name="settings_view_password">Password settings</string>
	<string name="settings_view_toggleContextCrawlingBtn_label">Store Android sensor data:</string>
	<string name="settings_view_toggleSet_label">Scientific Evaluation:</string>
    <string name="settings_view_toggleContextCrawlingBtn">Send location and sensor data to your Private Server. Activated services use this information, e.g. the ProximityService to show people nearby to you. </string>
	<string name="settings_view_toggleSet">Send anonymous click data and statistic for the scientific evaluation of the prototype. Further Information:</string>
	<string name="settings_view_set_open_dialog">see link</string>
	<string name="settings_view_set_dialog_label">Please contribute to the scientific evaluation</string>
	<string name="settings_view_set_dialog_text">We kindly ask you to send us anonymous click data. These data cannot be traced back to your person. We use these data only to analyse how users use our prototype. The following data are collected: \n1. an anonymous identifyier which allows us to know what click data and questionaire answers come from the same account. No other identity information like your di.me username, nickname, real name, or email-address is sent. No location information is sent. \n2. statistics about how many contacts, files, messages, and connected systems you use in your system. Only the number and time when created, but no information about names, content, or anything else is sent. \n3. data about what type of pages you click in the system (e.g. a page „person“). This includes the time the page was clicked. No title, text, or other content of the pages are sent. We do not use other click analysis (like e.g. Google Analytics). You can switch this off at any time on the page “Settings“.</string>
	<string name="settings_view_dimeuserdirectory">To use di.me, you need to publish a a public mini-Profile ("MyPublicCard") on the DimeUserDirectory. This directory is public for all di.me users, so that you can get contacted by others in the network. You can use a nickname and also your real name.</string>
    <string name="info_dialog_welcome_text">Welcome and many thanks for trying out di.me mobile!</string>
    <string name="info_dialog_client">Client information</string>
    <string name="info_dialog_about">About</string>
	<string name="info_dialog_client_version">Client version:</string>
	<string name="info_dialog_getting_started_label">Getting started with di.me</string>
	<string name="info_dialog_getting_started_text">"Please follow our "</string>
	<string name="info_dialog_getting_started_link">Tutorial</string>
	<string name="info_dialog_feedback_label">Please give us feedback to the concept on:</string>
	<string name="info_dialog_feeback_link">di.me Questionnaire (English)</string>
    <string name="info_dialog_bugs_label">This is a demonstration prototype</string>
    <string name="info_dialog_bugs_text">so you will find many bugs and issues. Please report them on: &lt;a href=\"https://github.com/dime-project/meta/issues\"&gt;Github&lt;/a&gt;</string>
    <string name="info_dialog_about_trial_homepage">The test trial &lt;a href=\"http://dimetrials.bdigital.org\"&gt;homepage&lt;/a&gt;.</string>
    <string name="info_dialog_about_os_homepage">di.me open spurce: coming soon</string>
    <string name="info_dialog_about_project_homepage">The research project &lt;a href=\"http://di.me-project.eu\"&gt;homepage&lt;/a&gt;.</string>
    <string name="info_dialog_about_usage">Usage Conditions (EN)</string>
    <string name="info_dialog_about_privacy">Privacy declaration (EN)</string>
    <string name="action_addPeopleToGroup">Add selected person(s) to group</string>
    <string name="action_addPeopleToGroupDetail">Add person(s) to group</string>
    <string name="action_removeSelectedPeopleFromGroup">Remove selected person(s) from group</string>
    <string name="action_renameGroup">Rename group</string>
    <string name="action_mergeSelection">Merge selected person(s)</string>
    <string name="action_shareSelectedItems">Share selected</string>
    <string name="action_share">Share</string>
    <string name="action_unshare">Stop sharing</string>
    <string name="action_saveAsNewGroup">Save as new group</string>
    <string name="action_addNewGroup">Add new group</string>
    <string name="action_deleteSelectedGroups">Delete selected group(s)</string>
    <string name="action_searchPublicResolverService">Search di.me user directory</string>
    <string name="action_importSpecificContactFromPhoneBook">Import contact from phone book</string>
    <string name="action_importAllContactsFromPhoneBook">Import all contacts from phone book</string>
    <string name="action_addToNewGroup">Add selected person(s) to new group</string>
    <string name="action_uploadFile">Upload resource</string>
    <string name="action_uploadImage">Upload image</string>
    <string name="action_assignToNewDatabox">Assign selected resource(s) to new databox</string>
    <string name="action_assignToDatabox">Assign selected resource(s) to databox</string>
    <string name="action_addNewDatabox">Add new databox</string>
    <string name="action_deleteSelectedDataboxes">Delete selected databox(es)</string>
    <string name="action_addResourcesToDatabox">Add resource(s) to databox</string>
    <string name="action_removeResourcesFromDatabox">Remove selected resource(s) from databox</string>
    <string name="action_newMessage">New livepost</string>
    <string name="action_newProfile">New profile</string>
    <string name="action_deleteSelectedProfiles">Delete selected profile card(s)</string>
    <string name="action_addExistingAttribute">Add existing profile detail</string>
    <string name="action_addNewAttribute">Add new profile detail</string>
    <string name="action_deleteSelectedAttributeCategories">Delete selected profile detail(s)</string>
    <string name="action_exit">Exit</string>
    <string name="action_logout">Logout</string>
    <string name="action_newSituation">New situation</string>
    <string name="action_deleteSituation">Delete selected situation(s)</string>
    <string name="action_setCurrentPositionTag">Set as current place (valid today)</string>
    <string name="action_removeCurrentPositionTag">Remove current position tag</string>
    <string name="action_setFavouriteTag">Set favourite tag</string>
    <string name="action_removeFavouriteTag">Remove favourite tag</string>
    <string name="action_removeSelectedNotifications">Remove selected notifications</string>
    <string name="action_removeAllNotifications">Remove all notifications</string>
    <string name="action_removeLivepost">Delete selected livepost(s)</string>
    <string name="action_removeSelectedResources">Delete selected resource(s)</string>
    <string name="action_connectServiceAdapter">Connect service</string>
    <string name="action_disconnectServiceAdapter">Disconnect selected service(s)</string>
    <string name="action_editItem">Edit item</string>
    <string name="action_removePerson">Delete selected person(s)</string>
    <string name="action_homeButtonPressed">homePressed</string>
    <string name="action_answerLivepost">Answer livepost</string>
    <string name="action_setDefaultProfile">Set default profile</string>
    <string name="sharing_no_receiver">no receiver(s) selected</string>
    <string name="sharing_no_items">no item(s) selected</string>
    <string name="sharing_no_warnings">Sharing possible without warnings!</string>
    <string name="sharing_label_receivers">Recipients:</string>
    <string name="sharing_label_shareas">Share as:</string>
    <string name="sharing_label_items">Items:</string>
    <string name="sharing_label_warnings">Warnings:</string>
    <string name="sharing_warning_untrusted">Privacy risk</string>
    <string name="sharing_warning_disjunct_groups">Sharing outside usual group</string>
    <string name="sharing_warning_unshared_profile">Revealing profile card</string>
    <string name="sharing_warning_too_many_resources">Many items shared</string>
    <string name="sharing_warning_too_many_receivers">Many recipients selected</string>
    <string name="sharing_warning_agent_not_valid_for_sharing">Cannot share to recipients</string>
    <string name="sharing_warning_not_possible">Sharing not possible</string>
    <string name="sharing_warning_not_possible_detailed">Please select your identity you want to use for sharing and at least one recipient and item!</string>
    <string name="edit_trust_value_hint">Determines the number of warnings when sharing private items.</string>
    <string name="edit_privacy_value_hint">Determines the number of warnings when sharing to untrusted persons.</string>
    <string name="sharing_dialog_select_profile_info">The selected profile will be used for sharing. If you chose a different profile than the one people know, they may become linkable!</string>
    <string name="sharing_dialog_select_group_info">All containing persons of the selected group(s) will get access to the shared items, even those persons you probably add to the group after the initial sharing process!</string>
    <string name="sharing_dialog_select_persons_info">The selected person(s) will get access to the shared items!</string>
    <string name="sharing_dialog_select_databoxes_info">All containing resources of the selected databox(es) will be shared to the receiver(s), even those resources you probably add to the databox after the initial sharing process!</string>
    <string name="sharing_dialog_select_resources_info">The selected resource(s) will be shared to the receiver(s)!</string>
    <string name="sharing_dialog_select_liveposts_info">The selected livepost(s) will be shared to the receiver(s)!</string>
</resources>